kubernetes/network/apps/observability/blackbox-exporter/app/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blackbox-exporter
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames: ["blackbox.${CLUSTER_DOMAIN}"]
  rules:
    - backendRefs:
        - name: blackbox-exporter
          port: 9115
